--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 	mavenCentral()
 }
 
+mainClassName = 'com.startup.m3.M3Application'
+
 springBoot {
 	mainClass = "com.startup.m3.M3Application"
 }
